# soong-agent

./: .gitignore  README.md  agenthub  pyproject.toml  requirements.txt  soong-tui
.soong-agent/plans/: auth_service_plan.md
doc/: 0-index.md  02-python-implementation.md  03-runtime-api.md  05-provider-adapter.md  06-context-session.md  08-compact.md  09-artifacts.md  10-memory.md  11-instructions-skills.md  12-tool-registry.md  13-mcp.md  14-hooks.md  15-multi-agent.md  16-plan-todo.md  17-task-board.md  18-config-file-layout.md  19-testing.md  21-codegen-contract.md  22-codegen-plan.md  23-completion-audit.md  WantedProj.md
evals/bfcl/: README.md  __init__.py  bfcl_format.py  run_agent_bfcl.py  run_official_bfcl.py  sample_cases.jsonl  soong_bfcl_handler.py
evals/bfcl/results/: .gitignore
examples/: config_openai_ollama.toml
src/agent_cli/: __init__.py  cli.py  config_bootstrap.py  plain.py  render.py  tui.py
src/agent_cli/tui/: __init__.py  app.py  formatting.py  slash.py  suggestions.py  types.py  widgets.py
src/agent_core/: __init__.py  cli.py
src/agent_core/agents/: __init__.py  builtin.py  child.py  definitions.py  dynamic.py  parsing.py  registry.py  workers.py
src/agent_core/api/: __init__.py  handles.py  replay.py  runtime.py
src/agent_core/artifacts/: __init__.py  cleanup.py  manager.py  redaction.py
src/agent_core/assets/: loader.py
src/agent_hub/: __init__.py
tests/: conftest.py
tests/e2e/: test_agent_hub_codex_mcp_real.py  test_agent_hub_codex_pty.py  test_agent_hub_ollama.py  test_agent_hub_opencode.py  test_ollama_gemma4.py
tests/fixtures/: fake_codex_mcp_server.py  fake_provider.py  ollama.py  scripted_ollama.py
tests/integration/: test_agent_hub_backend.py  test_agent_hub_codex_mcp.py  test_agent_hub_pty.py  test_branchable_nodes.py  test_compact_runtime.py  test_dynamic_workers.py  test_mcp.py  test_memory_extraction_runtime.py  test_multi_agent.py  test_orchestrator_mode.py  test_plan_task_tools.py  test_replay_cleanup.py  test_run_queue_cancel.py  test_runtime_loop.py  test_worker_dispatch.py
tests/unit/: test_agent_definitions.py  test_agenthub_script.py  test_artifacts.py  test_assets_and_cli.py  test_bfcl_eval_format.py  test_code_tools.py  test_compact_memory.py  test_config_loader.py  test_hooks_mcp_declarative.py  test_instruction_skill_memory.py  test_provider_mapping.py  test_public_api.py
(+226 files in other folders)
