[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soong-agent"
version = "0.1.0"
description = "Agent Core SDK and CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
soong-agent = "agent_core.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

