[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soong-agent"
version = "0.1.0"
description = "Agent Core SDK and CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "aiosqlite>=0.19",
    "PyYAML>=6.0",
    "rich>=13",
    "textual>=0.85",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
agentcli = "agent_cli.cli:main"
agenthub-backend = "agent_hub.backend.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_core", "src/agent_cli", "src/agent_hub"]
include = [
    "src/agent_core/py.typed",
    "src/agent_cli/py.typed",
    "src/agent_core/assets/**/*.md",
    "src/agent_core/assets/**/*.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
